--- a/sass/layout/_section-to-do.scss
+++ b/sass/layout/_section-to-do.scss
@@ -1,3 +1,9 @@
+.to-do-section {
+    @media screen and (max-width: 1200px) {
+        display: none;
+    }
+}
+
 .to-do {
     font-weight: 700;
     font-size: 36px;
@@ -10,10 +16,6 @@
 
 .to-do-section {
     padding-bottom: var(--next-typical-gap);
-    @media screen and (max-width: 1199px) {
-        display: none;
-        margin-bottom: 50px;
-    }
 }
 
 .our-work {
@@ -26,11 +28,11 @@
     margin-left: var(--typical-gap);
 }
 
-// img {
-//     display: block;
-//     max-width: 100%;
-//     height: auto;
-// }
+img {
+    display: block;
+    max-width: 100%;
+    height: auto;
+}
 
 .thumb-to-do {
     position: relative;
