--- a/sass/utils/_variables.scss
+++ b/sass/utils/_variables.scss
@@ -7,4 +7,12 @@
     --next-typical-gap: 94px;
     --fill-color: #F5F4FA;
     --svg-color: #AFB1B8;
+    --main-font: 'Roboto', sans-serif;
+    --second-font: 'Raleway', sans-serif;
+    --bg-gradi: rgba(47, 48, 58, 0.4), rgba(47, 48, 58, 0.4);
 }
+
+
+
+
+
