--- a/sass/base/_container.scss
+++ b/sass/base/_container.scss
@@ -1,17 +1,26 @@
 .container {
+    // Mobile screen first
     width: 100%;
     padding-left: 15px;
     padding-right: 15px;
     margin-left: auto;
     margin-right: auto;
+    // outline: 1 solid tomato;
+    // outline-offset: 1 solid tomato;
+
+    // breakpoint 480px for mobile screen
 
     @media screen and (min-width: 480px) {
         max-width: 480px;
     }
 
+    // breakpoint 768px for tablet screen
+
     @media screen and (min-width: 768px) {
         max-width: 768px;
     }
+
+    // breakpoint 1200px for tablet screen
 
     @media screen and (min-width: 1200px) {
         max-width: 1200px;
