--- a/sass/base/_reset.scss
+++ b/sass/base/_reset.scss
@@ -1,8 +1,13 @@
 body {
+    font-family: var(--main-font);
+    letter-spacing: 0.03em;
     background-color: var(--white-color);
     color: var(--primery-text-color);
-    font-family: 'Roboto', sans-serif;
     letter-spacing: 0.03em;
+}
+
+body.modal-open {
+    overflow: hidden;
 }
 
 p,
@@ -22,16 +27,16 @@ li {
     display: list-item;
 }
 
-textarea {
-    resize: none;
+ul {
+    list-style: none;
 }
 
-a {
+.link {
     text-decoration: none;
 }
 
-img {
-    display: block;
-    max-width: 100%;
-    height: auto;
-}
+// @import url("https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap");
+
+// .no-scroll {
+//     overflow: hidden;
+// }
