--- a/sass/components/_portfolio-buttons.scss
+++ b/sass/components/_portfolio-buttons.scss
@@ -1,4 +1,4 @@
-.button-list {
+.buttons-list {
     display: flex;
     flex-wrap: wrap;
     gap: 15px 8px;
@@ -119,4 +119,21 @@
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1),
         0px 1px 2px rgba(0, 0, 0, 0.08),
         0px 2px 2px rgba(0, 0, 0, 0.12);
+}
+
+.button-list {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 15px 8px;
+    margin-bottom: 40px;
+
+    @media screen and (min-width: 768px) {
+        justify-content: center;
+        margin-bottom: 30px;
+        display: flex;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-bottom: 50px;
+    }
 }
