--- a/sass/layout/_footer.scss
+++ b/sass/layout/_footer.scss
@@ -6,25 +6,66 @@
 }
 
 .footer-list {
-    display: flex;
-    align-items: baseline;
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: space-around;
+    }
+
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        align-items: baseline;
+    }
 }
 
 .logo-foot {
     color: var(--title-text-color);
-    font-family: 'Raleway', sans-serif;
+    font-family: var(--second-font);
     font-weight: 700;
     font-size: 26px;
-    line-height: 1.2;
+    line-height: 1.19;
     letter-spacing: 0.03em;
     text-decoration: none;
-    display: block;
     margin-bottom: 20px;
+    display: block;
+
+    // @media screen and (max-width: 767px) {
+    //     display: block;
+    //     padding-top: 16px;
+    //     padding-bottom: 16px;
+    // }
+
+    // @media screen and (max-width: 1199px) {
+    //     font-size: 24px;
+    //     line-height: 1.16;
+    // }
+
+    // @media screen and (min-width: 1200px) {
+    //     font-size: 26px;
+    //     line-height: 1.19;
+    // }
 }
 
+// .footer-nav {
+//     max-width: 231px;
+//     display: block;
+// }
+
 .footer-nav {
-    max-width: 231px;
-    display: block;
+    @media screen and (max-width: 1199px) {
+        margin-bottom: 60px;
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    @media screen and (max-width: 767px) {
+        width: 100%;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-right: 70px;
+    }
 }
 
 .footer-address,
@@ -48,7 +89,7 @@
 }
 
 .footer-title {
-    display: inline-block;
+    // display: inline-block;
     font-weight: 700;
     font-size: 14px;
     line-height: 1.14;
@@ -58,13 +99,30 @@
     margin-bottom: 20px;
 }
 
+// .footer-links {
+//     padding-top: 12px;
+//     margin-left: 70px;
+//     border: none;
+//     min-width: 206px;
+//     display: block;
+// }
+
 .footer-links {
-    padding-top: 12px;
-    margin-left: 70px;
-    border: none;
-    min-width: 206px;
-    display: block;
+    @media screen and (max-width: 1199px) {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    @media screen and (max-width: 1199px) {
+        margin-bottom: 60px;
+    }
+
+    @media screen and (max-width: 767px) {
+        width: 100%;
+    }
 }
+
 
 .footer-address {
     color: var(--white-color);
@@ -106,8 +164,20 @@
 
 
 .form {
-    width: 570px;
-    margin-left: auto;
+    @media screen and (max-width: 1199px) {
+        display: flex;
+        align-items: center;
+        flex-direction: column;
+    }
+
+    @media screen and (min-width: 768px) and (max-width: 1199px) {
+        width: 450px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-left: auto;
+        width: 570px;
+    }
 }
 
 .form-sign {
@@ -143,13 +213,20 @@
 }
 
 .form-wrap {
-    display: flex;
+    width: 100%;    
+
+    @media screen and (min-width: 1200px) {
+        display: flex;
+        flex-wrap: wrap;
+    }
 }
+
 
 .form-btn {
     display: flex;
     padding: 0;
     width: 200px;
+    height: 50px;
     justify-content: center;
     align-items: center;
     font-weight: 700;
@@ -167,6 +244,17 @@
         background-color: var(--title-text-color);
         box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
     }
+
+    @media screen and (max-width: 1199px) {
+        margin: 0 auto;
+        margin-top: 20px;
+    }
+
+    @media screen and (min-width: 1200px) {
+        margin-left: auto;
+
+    }
+
 }
 
 .icon-form {
