--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -28,12 +28,18 @@
 }
 
 .menu-container {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 100vh;
+    padding: 32px;
     background-color: #FFFFFF;
     z-index: 999;
-    text-align: left;
-    font-size: 20px;
+    // text-align: left;
+    // font-size: 20px;
 
-    // transform: translateX(100%);
+    transform: translateX(100%);
     // transition: transform 250ms ease-in-out;
     @media screen and (max-width: 767px) {
         display: none;
@@ -51,6 +57,7 @@
 }
 
 .menu-container.is-open {
+    transform: translateX(0);
     display: block;
 }
 
