--- a/sass/components/_mobile-menu.scss
+++ b/sass/components/_mobile-menu.scss
@@ -1,5 +1,5 @@
 .menu-button {
-    display: inline-flex;
+    display: flex;
     margin: 0;
     padding: 0;
     bottom: none;
@@ -36,11 +36,11 @@
     padding: 32px;
     background-color: #FFFFFF;
     z-index: 999;
-    // text-align: left;
-    // font-size: 20px;
+    text-align: left;
+    font-size: 20px;
 
     transform: translateX(100%);
-    // transition: transform 250ms ease-in-out;
+    transition: transform 250ms ease-in-out;
     @media screen and (max-width: 767px) {
         display: none;
         position: absolute;
@@ -116,7 +116,8 @@
 //     color: #fff;
 // }
 
-// .mobile-menu .header-list {
+// .header-list {
+//     display: flex;
 //     padding: 0;
 //     margin: 0;
 //     list-style: none;
