--- a/sass/layout/_email-tel.scss
+++ b/sass/layout/_email-tel.scss
@@ -1,26 +1,36 @@
 .contact-list {
-    display: none;
-    // flex-wrap: wrap;
-    margin-left: auto;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: flex-start;
+    row-gap: 10px;
+    font-size: 12px;
+    line-height: 1.17;
+    margin-left: 96px;
 
-    @media screen and (min-width: 768px) and (max-width: 1199px) {
-        display: flex;
-        flex-wrap: wrap;
-        justify-content: flex-start;
-        row-gap: 10px;
-        font-size: 12px;
-        line-height: 1.17;
-        margin-left: 96px;
+    @media screen and (max-width: 767px) {
+        display: none;
     }
-    
+
     @media screen and (mix-width: 1200px) {
+        margin-left: auto;
         display: flex;
         justify-content: center;
         align-items: center;
         gap: 30px;
         margin-bottom: 64px;
+        margin-left: 315px;
     }
 }
+
+
+
+// .contact-list .contact__item+.contact__item {
+//     margin-left: auto;
+//     @media screen and (min-width: 1200px) {
+//         margin-left: 50px;
+//     }
+    
+// }
 
 // .contact-list .contact__item + .contact__item {
 //     margin-left: 50px;
