--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,16 +1,23 @@
 .main-nav {
-    display: flex;
-    align-items: center;
+    display: none;
+
+    @media screen and (max-width: 767px) {
+        display: flex;
+        align-items: center;
+        
+    }
+
 }
 
 .nav {
-    display: none;
-    align-items: center;
+    display: flex;
+    // display: none;
+    // align-items: center;
 
-    @media screen and (min-width: 768px) {
-        display: flex;
+    // @media screen and (min-width: 768px) {
+    //     display: flex;
         
-    }
+    // }
 }
 
 .nav__studio,
