--- a/sass/layout/_clients.scss
+++ b/sass/layout/_clients.scss
@@ -1,6 +1,6 @@
 .clients {
-    padding-top: 60px;
-    padding-bottom: 60px;
+    padding-top: var(--next-typical-gap);
+    padding-bottom: var(--next-typical-gap);
 }
 
 .clients-title {
@@ -8,7 +8,7 @@
     font-size: 36px;
     line-height: 1.16;
     letter-spacing: 0.03em;
-    margin-bottom: 30px;
+    margin-bottom: 50px;
     text-align: center;
     color: var(--accent-color);
 }
