--- a/sass/layout/_nav.scss
+++ b/sass/layout/_nav.scss
@@ -1,9 +1,9 @@
 .main-nav {
-    display: none;
+    display: flex;
+        align-items: center;
 
     @media screen and (max-width: 767px) {
-        display: flex;
-        align-items: center;
+        display: none;
         
     }
 
@@ -12,7 +12,7 @@
 .nav {
     display: flex;
     // display: none;
-    // align-items: center;
+    align-items: center;
 
     // @media screen and (min-width: 768px) {
     //     display: flex;
@@ -51,7 +51,7 @@
 }
 
 .current::after {
-    content: "";
+    content: '';
     position: absolute;
     height: 4px;
     background-color: var(--title-text-color);
