--- a/sass/layout/_portfolio-cards.scss
+++ b/sass/layout/_portfolio-cards.scss
@@ -1,8 +1,8 @@
-// .cards-content {
-//     display: flex;
-//     flex-wrap: wrap;
-//     margin-right: -30px;
-// }
+.cards-content {
+    display: flex;
+    flex-wrap: wrap;
+    margin-right: -30px;
+}
 
 .cards-content {
     @media screen and (min-width: 768px) {
