--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -20,7 +20,6 @@
 
 .modal {
     display: flex;
-    padding: 40px;
     flex-direction: row-reverse;
     position: absolute;
     top: 50%;
@@ -78,7 +77,6 @@
 }
 
 .modal-form {
-    position: absolute;
     padding: 40px;
 }
 
@@ -108,7 +106,7 @@
 }
 
 .form-field {
-    position: relative;
+    // position: relative;
     margin-bottom: 10px;
 }
 
