--- a/sass/layout/_portfolio-main-content.scss
+++ b/sass/layout/_portfolio-main-content.scss
@@ -1,14 +1,9 @@
-// .main-content {
-//     padding-top: var(--next-typical-gap);
-//     padding-bottom: var(--next-typical-gap);
-// }
-
 .main-content {
     padding-top: 60px;
     padding-bottom: 60px;
 
     @media screen and (min-width: 1200px) {
-        padding-top: 94px;
-        padding-bottom: 94px;
+        padding-top: var(--next-typical-gap);
+        padding-bottom: var(--next-typical-gap);
     }
 }
